--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.com.app</groupId>
-  <artifactId>mvnO</artifactId>
+  <artifactId>mvnP</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>mvnO</name>
+  <name>mvnP</name>
   <url>http://maven.apache.org</url>
 
   <properties>
